--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .no-scrolling {
+        overflow: hidden;
+    }
+    #order-modal-overlay:after {
+        content: '';
+        display: block;
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 8999;
+        background-color: white;
+    }
+}
